<resources>
    <string name="app_name">android</string>
    <string name="simple">Simple</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">subject</string>
    <string name="divider">divider</string>
    <string name="show_bottom_sheet">Show Bottom sheet</string>
    <string name="start_fragment">start fragment</string>
    <string name="stop_fragment">stop fragment</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="lifecycle">LifeCycle</string>
    <string name="change_backlight_light">Change backlight light</string>
    <string name="simple_recycler">Simple Recycler</string>
    <string name="horizontal">Horizontal</string>
    <string name="send_email">send Email</string>
    <string name="services">Services</string>
    <string name="shared_preferences">Shared preferences</string>
    <string name="view_binding">View Binding</string>
    <string name="data_binding">Data Binding</string>
    <string name="mvvm_live_data">Mvvm Live_Data</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_background_service">Stop Background Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="background_service_status">Background Service Status</string>
    <string name="foreground_service_status">Foreground service status</string>
    <string name="start_on_off_screen_service">Start On Off Screen Service</string>
    <string name="stop_on_off_screen_service">Stop On Off Screen Service</string>
    <string name="on_off_screen_status">On Off screen status</string>
    <string name="transparent_status">Transparent status</string>
    <string name="start_transparent_service">Start transparent Service</string>
    <string name="stop_transparent_service">Stop transparent Service</string>
    <string name="read_data">Read Data</string>
    <string name="write_data">Write Data</string>
    <string name="room">Room</string>
    <string name="password">password</string>
    <string name="load_from_database">load From DataBase</string>
    <string name="save_to_database">Save To DataBase</string>
    <string name="username">UserName</string>
    <string name="lastname">LastName</string>
    <string name="phone_number">PhoneNumber</string>
    <string name="view_to_model_model_to_view">View to Model- Model to View</string>
    <string name="view_tag_id">View tag id</string>
    <string name="set_view_to_model">Set View To Model</string>
    <string name="set_model_to_view">Set Model To View</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="socket">Socket</string>
    <string name="send_data_to_server">Send data to server</string>
    <string name="mvp">MVP</string>
    <string name="ok">OK</string>
    <string name="news_details">News details</string>
    <string name="image">Image</string>
    <string name="id">ID</string>
    <string name="paging">Paging</string>
    <string name="viewpager_slider">ViewPager slider</string>
    <string name="fragment">Fragment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="navigation">Navigation</string>
    <string name="next_page">Next Page</string>
    <string name="back_to_last_activity">Back to last activity</string>
    <string name="passing_argument">Passing Argument</string>
    <string name="back">Back</string>
    <string name="activity_result_launcher">Activity result launcher</string>
    <string name="saved_state_handle">Saved state handle</string>
    <string name="file_picker">File Picker</string>
    <string name="list_differ">List Differ</string>
    <string name="list_adapter">List Adapter</string>
    <string name="alert_dialog_builder">Alert dialog builder</string>
    <string name="simple_alert_dialog">Simple alert dialog</string>
    <string name="alert_dialog">Alert dialog</string>
    <string name="confirmation_dialog">Confirmation dialog</string>
    <string name="dialogs">Dialogs</string>
    <string name="full_screen_dialog">Full screen dialog</string>
    <string name="full_screen_dialog_large">Full screen dialog large</string>
    <string name="first_item">First item</string>
    <string name="third_item">third item</string>
    <string name="second_item">Second item</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_compos">ComposActivity</string>
    <string name="title_activity_function">FunctionActivity</string>
    <string name="title_activity_components">ComponentsActivity</string>
    <string name="title_activity_multiple_view">MultipleViewActivity</string>
    <string name="name">Name</string>
    <string name="simple_mvp">Simple MVP</string>
    <string name="base_mvp">Base Mvp</string>
    <string name="os_update">OS update</string>
    <string name="dynamic_view">Dynamic View</string>
    <string name="intents">Intents</string>
    <string name="overlay_permission">Overlay Permission</string>
    <string name="mvi">MVI</string>
    <string name="call_api">Call API</string>
    <string name="call_api_flow">Call API flow</string>
    <string name="kotlin_flow">Kotlin Flow</string>
    <string name="create_flow">Create Flow</string>
    <string name="launch_flow">Launch flow (leak) X</string>
    <string name="map">map</string>
    <string name="flow_map">Flow Map</string>
    <string name="flow_filter">Flow Filter</string>
    <string name="flow_catch">Flow Catch</string>
    <string name="flow_as_livedata">Flow as livedata</string>
    <string name="flow_with_lifecycle">Flow With Lifecycle</string>
    <string name="repeat_on_lifecycle_started">Repeat on lifecycle started</string>
    <string name="repeat_on_lifecycle_created">Repeat on lifecycle created</string>
    <string name="state_flow">State Flow</string>
    <string name="shared_flow">Shared Flow</string>
    <string name="worker">worker</string>
    <string name="long_process_without_worker">Long Process without worker</string>
    <string name="long_process_with_worker">Long Process with worker</string>
    <string name="call_priority">CAll Priority</string>
    <string name="call_inner_api">CAll Inner API</string>
    <string name="api_response_after_ondestroyed">Api Response After OnDestroyed</string>
    <string name="first">first</string>
    <string name="first_catch">first/catch</string>
    <string name="compose">Compose</string>
    <string name="title_activity_first_cource">FirstCourceActivity</string>
    <string name="title_activity_first_course_animation">FirstCourseAnimationActivity</string>
    <string name="title_activity_first_coursse">FirstCoursseActivity</string>
    <string name="title_activity_scaffold">scaffoldActivity</string>
    <string name="title_activity_codelab_basic_layout">CodelabBasicLayoutActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_water_counter">WaterCounterActivity</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="title_activity_custom_annotation">CustomAnnotationActivity</string>
    <string name="title_activity_deep_to_lazy">DeepToLazyActivity</string>
    <string name="title_activity_deep_to_grid">DeepToGridActivity</string>
    <string name="title_activity_m3_themes">M3ThemesActivity</string>
    <string name="location">Location</string>
    <string name="permission">Permission</string>
    <string name="location_permission">Location Permission</string>
    <string name="request_fine_permission">Request fine permission</string>
    <string name="request_coarse_permission">Request coarse permission</string>
    <string name="get_permission_status">Get permission status</string>
    <string name="get_current_location">Get current location</string>
    <string name="title_activity_advanced_compose">AdvancedComposeActivity</string>
    <string name="title_activity_compose_vmactivity">ComposeVMActivity</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="location_setting">Location setting</string>
    <string name="phone_location_setting">Phone location Setting</string>
    <string name="telephony_manager">Telephony Manager</string>
    <string name="net_state">Net state: </string>
    <string name="internet">Internet</string>
    <string name="webView">WebView</string>
    <string name="show_on_webview">ShowOnWebView</string>
    <string name="show_on_activity">Show On Activity</string>
    <string name="load_from_html_screen">Load From HTML Screen</string>
    <string name="call_api_stateflow">Call API StateFlow</string>
    <string name="to_page_3">To page 3</string>
    <string name="to_page_4">To page 4</string>
    <string name="go_to_another_module_fragment">Go to another module fragment</string>
    <string name="sensors">Sensors</string>
    <string name="title_activity_sensors">SensorsActivity</string>
    <string name="data_store">Data Store</string>
    <string name="save_sample_txt">Save Sample Text</string>
    <string name="load_sample_txt">Load Sample Text</string>
    <string name="enter_a_text_here">Enter a Text here</string>
    <string name="title_activity_canvas">canvasActivity</string>
    <string name="canvas">Canvas</string>
    <string name="loading">loading</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_dispather_touch_listener">DispatherTouchListener</string>
</resources>