<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".kotlin_flow.KotlinFlowActivity">

    <Button
        android:id="@+id/btn_launch_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_flow"/>

    <Button
        android:id="@+id/btn_flow_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_map"/>

    <Button
        android:id="@+id/btn_flow_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_filter"/>

    <Button
        android:id="@+id/btn_flow_catch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_catch"/>

    <Button
        android:id="@+id/btn_flow_as_livedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_as_livedata"/>

    <Button
        android:id="@+id/btn_flow_With_Lifecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_with_lifecycle"/>

    <Button
        android:id="@+id/btn_repeatLifecycle_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_on_lifecycle_started"/>

    <Button
        android:id="@+id/btn_repeatLifecycle_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_on_lifecycle_created"/>

    <Button
        android:id="@+id/btn_state_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_flow"/>

    <Button
        android:id="@+id/btn_shared_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shared_flow"/>

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"/>

    <Button
        android:id="@+id/btn_transform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"/>

    <Button
        android:id="@+id/btn_call_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_priority"/>

    <Button
        android:id="@+id/btn_call_inner_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_inner_api"/>

    <Button
        android:id="@+id/btn_responseAfterDestroy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_response_after_ondestroyed"/>

    <Button
        android:id="@+id/btn_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first"/>

    <Button
        android:id="@+id/btn_first_catch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_catch"/>

</androidx.appcompat.widget.LinearLayoutCompat>