<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".dialog.DialogActivity">

    <Button
        android:id="@+id/btn_alert_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog"/>

    <Button
        android:id="@+id/btn_simple_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_alert_dialog"/>

    <Button
        android:id="@+id/btn_confirmation_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_dialog"/>

    <Button
        android:id="@+id/btn_full_screen_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_screen_dialog"/>

    <Button
        android:id="@+id/btn_full_screen_dialog_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_screen_dialog_large"/>


</androidx.appcompat.widget.LinearLayoutCompat>