<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dialog.CustomDialogFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/enter_your_name"
            android:inputType="text" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

        <RadioGroup
            android:id="@+id/rdg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_item" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_item" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_item" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/chk01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_item" />

        <CheckBox
            android:id="@+id/chk02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_item" />

        <CheckBox
            android:id="@+id/chk03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_item" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>