<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".location.LocationActivity">

    <Button
        android:id="@+id/btn_request_fine_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_fine_permission"/>

    <Button
        android:id="@+id/btn_request_coarse_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_coarse_permission"/>

    <Button
        android:id="@+id/btn_get_permission_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_permission_status"/>

    <Button
        android:id="@+id/btn_get_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_current_location"/>

    <TextView
        android:id="@+id/txt_location_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>