<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".intents.IntentsActivity">

    <Button
        android:id="@+id/btn_os_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/os_update"/>
    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"/>
    <Button
        android:id="@+id/btn_open_phone_location_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_location_setting"/>

</androidx.appcompat.widget.LinearLayoutCompat>