<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context="alidoran.android.navigation_safe_args.NavFragment01">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txt_whole_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="85sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_my_argument_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passing_argument"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/btn_next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_page"/>

        <Button
            android:id="@+id/btn_next_page4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_another_module_fragment"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>