<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvi.basic_mvi.view.MviActivity">

    <ProgressBar
        android:id="@+id/progress_mvi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
/>

    <Button
        android:id="@+id/btn_mvi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/call_api"/>

    <Button
        android:id="@+id/btn_mvi_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_api_flow"
        app:layout_constraintBottom_toTopOf="@+id/btn_mvi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_mvi_state_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_api_stateflow"
        app:layout_constraintBottom_toTopOf="@+id/btn_mvi_flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>